# shinima-pidgin-plugin

./: .gitignore  README.md  configure.ac
src/: Makefile.am  shinima-callbacks.c  shinima-callbacks.h  shinima-globals.h  shinima-link.c  shinima-link.h  shinima-message.c  shinima-message.h  shinima-pidgin-plugin.c
